[BE_ky]:add,fix db, route,api fx
