# models/user.py
@@ -1,5 +1,5 @@
 from extensions import db,ma
-from marshmallow import fields
+from marshmallow import fields 
 from werkzeug.security import generate_password_hash, check_password_hash
 
 class User(db.Model):
@@ -10,15 +10,19 @@ class User(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     username = db.Column(db.String(80), unique=True, nullable=False)
     email = db.Column(db.String(120), unique=True, nullable=False)
-    password_hash = db.Column(db.String(128), nullable=False)
- 
+    passwordHash = db.Column(db.String(128), nullable=False)
+    
+    trainings = db.relationship('Training', back_populates='user', lazy='dynamic')
     def __init__(self,username,email,password):
         self.username= username
         self.email=email
-        self.password_hash =generate_password_hash(password)
+        self.set_password(password) 
+    
+    def set_password(self,password):
+        self.passwordHash = generate_password_hash(password)
 
     def check_password(self,password):
-        return check_password_hash(self.password_hash,password)
+        return check_password_hash(self.passwordHash,password)
     
     def __repr__(self):
         return '<User %r>' % self.username
